form and input- fixed width of form, fixed gaps

--- a/style.css
+++ b/style.css
@@ -10,4 +10,16 @@ body {
     font-weight: bold;
    }
    
+   form {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+   }
+   
+   input {
+    width: inherit;
+    padding: inherit;
+    margin: inherit;
+   }
+   
    
